# fastapi-online-store

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test.yml
alembic/: env.py
alembic/versions/: 2f71e10c19a6_created_the_models_for_order.py  34f3aa0932cb_change_password_type_to_binary.py  41ea5abe06aa_create_the_cart_model_and_update_.py  55ee91a2097e_added_colomn_statuspayment_for_order.py  59bce0fc1aa0_create_the_user_model.py  6b475979a24f_add_index_for_price.py  6e913ac3392d_convert_categories_model_to_sqlalchemy_.py  7472b06fea9c_update_relationship_in_order_for_address.py  74e8a511d695_relocate_model_category.py  83ea0090aa49_new_structure.py  8545dc72979e_convert_products_model_to_sqlalchemy_2_0.py  8e6b8053726c_added_index_in_the_cartitem_and_cart_.py  9296b5e8868b_create_products_table.py  b95049532e3a_added_column_title_price_for_orderitem.py  dd55e087c59b_initial_migration_with_category_and_.py  e68897dd5cec_added_colomn_reserved_for_product.py  ef54081b160b_add_colomn_is_admin_for_model_user.py  f9f62415ffcb_convert_user_model_to_sqlalchemy_2_0_.py
app/: main.py
app/auth/: helpers.py  routers.py  services.py  validations.py
app/cart/: helpers.py  models.py  routers.py  schemas.py  services.py  validations.py
app/categories/: helpers.py  models.py  routers.py  schemas.py  services.py
app/core/: config.py  database.py  security.py
scripts/: init-jwt-keys.sh
tests/: conftest.py  factories.py  helpers.py
(+46 files in other folders)
